[gd_scene load_steps=3 format=3 uid="uid://0vcyinc8pjse"]

[ext_resource type="Script" uid="uid://mgqwk1jqou84" path="res://scenes/algorithm_manager/algorithm_manager.gd" id="1_c4g8j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c4g8j"]
bg_color = Color(0.404511, 0.404511, 0.404511, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="AlgorithmManager" type="PanelContainer"]
offset_right = 856.0
offset_bottom = 328.0
theme_override_styles/panel = SubResource("StyleBoxFlat_c4g8j")
script = ExtResource("1_c4g8j")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddAlgorithm" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AlgorithmsDropdown" type="OptionButton" parent="ScrollContainer/VBoxContainer/AddAlgorithm"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "---Select Algorithm---"
popup/item_0/id = 0

[node name="AddButton" type="Button" parent="ScrollContainer/VBoxContainer/AddAlgorithm"]
layout_mode = 2
text = "+ Add"

[node name="AlgorithmEditors" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="ScrollContainer/VBoxContainer/AddAlgorithm/AddButton" to="." method="_on_add_button_pressed"]
